--- a/home.html
+++ b/home.html
@@ -27,6 +27,10 @@
         <div class="card p-4 rounded-5">
           <div class="row">
             <div class="col my-5">
+              <div class="text-end">
+                <button id="logout" type="button" class="btn-close"></button>
+              </div>
+
               <div id="operationsCard" class="text-center rounded-5">
                 <img
                   id="operationImage"
